[gd_scene load_steps=25 format=1]

[ext_resource path="res://strategy.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]
[ext_resource path="res://dani_alpha.fnt" type="BitmapFont" id=3]
[ext_resource path="res://supplies.tscn" type="PackedScene" id=4]
[ext_resource path="res://town_banner.tscn" type="PackedScene" id=5]
[ext_resource path="res://finances.tscn" type="PackedScene" id=6]
[ext_resource path="res://top_buttons.gd" type="Script" id=7]
[ext_resource path="res://finances_full.tscn" type="PackedScene" id=8]
[ext_resource path="res://customers.tscn" type="PackedScene" id=9]
[ext_resource path="res://competition.tscn" type="PackedScene" id=10]
[ext_resource path="res://news.tscn" type="PackedScene" id=11]
[ext_resource path="res://supplies_full.tscn" type="PackedScene" id=12]
[ext_resource path="res://marketing.tscn" type="PackedScene" id=13]
[ext_resource path="res://storefront.tscn" type="PackedScene" id=14]
[ext_resource path="res://loan_shark.tscn" type="PackedScene" id=15]
[ext_resource path="res://research.tscn" type="PackedScene" id=16]
[ext_resource path="res://games.tscn" type="PackedScene" id=17]
[ext_resource path="res://arcade_pricing.tscn" type="PackedScene" id=18]
[ext_resource path="res://concessions_pricing.tscn" type="PackedScene" id=19]
[ext_resource path="res://repairman.tscn" type="PackedScene" id=20]
[ext_resource path="res://entertainment.tscn" type="PackedScene" id=21]
[ext_resource path="res://deus.tscn" type="PackedScene" id=22]
[ext_resource path="res://sabatoge.tscn" type="PackedScene" id=23]
[ext_resource path="res://genres.tscn" type="PackedScene" id=24]

[node name="strategy" type="Node2D"]

transform/pos = Vector2( 510.714, 300.479 )
transform/scale = Vector2( 16.0554, 9.40682 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 0.123229, -0.137201 )
transform/scale = Vector2( 0.0498189, 0.0905505 )
texture = ExtResource( 2 )

[node name="menu" type="LinkButton" parent="."]

rect/scale = Vector2( 0.05, 0.05 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -25.0
margin/right = 92.0
margin/bottom = 20.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "MENU"
underline = 2

[node name="supply_one" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( -1.18835, 23.5357 )
transform/scale = Vector2( 0.0739624, 0.113695 )

[node name="supply_two" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 3.60759, 23.5357 )
transform/scale = Vector2( 0.0739624, 0.113695 )

[node name="town_banner" parent="." instance=ExtResource( 5 )]

editor/display_folded = true
transform/pos = Vector2( -1.7917, -23.4998 )
transform/scale = Vector2( 0.644432, 0.179813 )

[node name="finances" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( -23.6191, 19.7098 )
transform/scale = Vector2( 0.201537, 0.293269 )

[node name="top_buttons" type="HButtonArray" parent="."]

rect/scale = Vector2( 0.048, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -16.0
margin/right = 1235.0
margin/bottom = 33.0
custom_fonts/font_selected = ExtResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_constants/button_separator = 2
flat = false
button/count = 9
button/min_button_size = 0.0
button/align = 101
button/0/text = "Reports"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "News"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "Supplies"
button/2/tooltip = ""
button/2/icon = null
button/3/text = "Games"
button/3/tooltip = ""
button/3/icon = null
button/4/text = "Pricing"
button/4/tooltip = ""
button/4/icon = null
button/5/text = "Marketing"
button/5/tooltip = ""
button/5/icon = null
button/6/text = "Upgrades"
button/6/tooltip = ""
button/6/icon = null
button/7/text = "Locals"
button/7/tooltip = ""
button/7/icon = null
button/8/text = "Research"
button/8/tooltip = ""
button/8/icon = null
button/selected = 0
script/script = ExtResource( 7 )

[node name="report_buttons" type="VButtonArray" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.048, 0.065 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -27.0
margin/top = -4.0
margin/right = 172.0
margin/bottom = 151.0
custom_fonts/font_selected = ExtResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
flat = false
button/count = 3
button/min_button_size = -1.0
button/align = 1065353216
button/0/text = "Finances"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "Customers"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "Competition"
button/2/tooltip = ""
button/2/icon = null
button/selected = 0

[node name="upgrade_buttons" type="VButtonArray" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.048, 0.065 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -6.0
margin/right = 289.0
margin/bottom = 202.0
custom_fonts/font_selected = ExtResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
flat = false
button/count = 4
button/min_button_size = -1.0
button/align = 1065353216
button/0/text = "Storefront"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "Repairman"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "Entertainment"
button/2/tooltip = ""
button/2/icon = null
button/3/text = "Deus Ex Machina"
button/3/tooltip = ""
button/3/icon = null
button/selected = 0

[node name="locals_buttons" type="VButtonArray" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.048, 0.065 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -27.0
margin/top = -2.0
margin/right = 177.0
margin/bottom = 108.0
custom_fonts/font_selected = ExtResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
flat = false
button/count = 2
button/min_button_size = -1.0
button/align = 1065353216
button/0/text = "Sabatoge"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "Loans"
button/1/tooltip = ""
button/1/icon = null
button/selected = 0

[node name="pricing_buttons" type="VButtonArray" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.048, 0.065 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -27.0
margin/top = -2.0
margin/right = 177.0
margin/bottom = 108.0
custom_fonts/font_selected = ExtResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
flat = false
button/count = 2
button/min_button_size = -1.0
button/align = 1065353216
button/0/text = "Concessions"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "Arcades"
button/1/tooltip = ""
button/1/icon = null
button/selected = 0

[node name="finances_full" parent="." instance=ExtResource( 8 )]

transform/pos = Vector2( 8.38022, 4.47914 )
transform/scale = Vector2( 0.667036, 0.410212 )

[node name="customers" parent="." instance=ExtResource( 9 )]

visibility/visible = false
transform/pos = Vector2( 8.32661, 4.52061 )
transform/scale = Vector2( 0.666168, 0.413116 )

[node name="competition" parent="." instance=ExtResource( 10 )]

visibility/visible = false
transform/pos = Vector2( 8.30167, 4.48758 )
transform/scale = Vector2( 0.6646, 0.411251 )

[node name="news" parent="." instance=ExtResource( 11 )]

visibility/visible = false
transform/pos = Vector2( 8.27121, 4.57416 )
transform/scale = Vector2( 0.661953, 0.408991 )

[node name="supplies_full" parent="." instance=ExtResource( 12 )]

visibility/visible = false
transform/pos = Vector2( 8.18142, 4.4278 )
transform/scale = Vector2( 0.661541, 0.405036 )

[node name="marketing" parent="." instance=ExtResource( 13 )]

visibility/visible = false
transform/pos = Vector2( 8.13787, 4.66261 )
transform/scale = Vector2( 0.653569, 0.395625 )

[node name="storefront" parent="." instance=ExtResource( 14 )]

visibility/visible = false
transform/pos = Vector2( 8.12956, 4.58284 )
transform/scale = Vector2( 0.64739, 0.393174 )

[node name="loans" parent="." instance=ExtResource( 15 )]

visibility/visible = false
transform/pos = Vector2( 7.98178, 4.54702 )
transform/scale = Vector2( 0.648649, 0.390113 )

[node name="research" parent="." instance=ExtResource( 16 )]

visibility/visible = false
transform/pos = Vector2( 8.05803, 4.50401 )
transform/scale = Vector2( 0.646566, 0.388286 )

[node name="games" parent="." instance=ExtResource( 17 )]

transform/pos = Vector2( 8.37637, 4.72096 )
transform/scale = Vector2( 0.664251, 0.415947 )

[node name="arcade_pricing" parent="." instance=ExtResource( 18 )]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 8.12449, 4.79634 )
transform/scale = Vector2( 0.651311, 0.401223 )

[node name="concessions_pricing" parent="." instance=ExtResource( 19 )]

visibility/visible = false
transform/pos = Vector2( 8.25623, 4.58675 )
transform/scale = Vector2( 0.64993, 0.403895 )

[node name="repairman" parent="." instance=ExtResource( 20 )]

visibility/visible = false
transform/pos = Vector2( 8.10507, 4.64923 )
transform/scale = Vector2( 0.64448, 0.387881 )

[node name="entertainment" parent="." instance=ExtResource( 21 )]

visibility/visible = false
transform/pos = Vector2( 8.15202, 4.72703 )
transform/scale = Vector2( 0.643449, 0.381172 )

[node name="deus_ex_machina" parent="." instance=ExtResource( 22 )]

visibility/visible = false
transform/pos = Vector2( 8.07035, 4.66303 )
transform/scale = Vector2( 0.641662, 0.387969 )

[node name="sabatoge" parent="." instance=ExtResource( 23 )]

visibility/visible = false
transform/pos = Vector2( 8.4278, 4.73673 )
transform/scale = Vector2( 0.661837, 0.410758 )

[node name="genre_one" parent="." instance=ExtResource( 24 )]

transform/pos = Vector2( 21.3631, -23.1414 )
transform/scale = Vector2( 0.052631, 0.0884332 )

[node name="genre_two" parent="." instance=ExtResource( 24 )]

transform/pos = Vector2( 25.2968, -23.2592 )
transform/scale = Vector2( 0.052631, 0.0884332 )

[node name="genre_three" parent="." instance=ExtResource( 24 )]

transform/pos = Vector2( 29.0925, -23.2592 )
transform/scale = Vector2( 0.052631, 0.0884332 )

[node name="start_day" type="LinkButton" parent="."]

rect/scale = Vector2( 0.1, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 19.0
margin/right = 187.0
margin/bottom = 62.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Start Day"
underline = 2

[connection signal="button_up" from="start_day" to="." method="_on_start_day_button_up"]


